try fixing invisible event header mobile

--- a/src/posts/static/css/util.mobile.css
+++ b/src/posts/static/css/util.mobile.css
@@ -2985,7 +2985,7 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 .tit4 {
 	font-family: Poppins;
 	font-weight: 700;
-	font-size: 30;
+	font-size: 30px;
 	line-height: 1.2;
 	color: #222222;
 	text-transform: uppercase;
